objects/Credit_Product__c.object
<CustomObject>
    <description>Object to store credit products- For Lease it will not have any product but for Loan it will have loan products such as 10 years, 20 years and amount</description>
    <fields>
        <fullName>Choice_Rate__c</fullName>
        <description>Choice rate to capture Mosaic decision</description>
        <label>Choice Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditApplication__c</fullName>
        <description>This is a master to credit Products. Loan terms are determined by Mosaic. CrediiDEcsionJSon will return this object.</description>
        <label>Credit Application</label>
        <referenceTo>Credit_Check_Request__c</referenceTo>
        <relationshipLabel>Credit Products</relationshipLabel>
        <relationshipName>Credit_products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loan_Month__c</fullName>
        <description>Loan term in months (10 years = 240 months)</description>
        <label>Loan Month Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Loan_Amount__c</fullName>
        <description>Maximum loan amount approved by Mosaic</description>
        <label>Max Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Loan_Amount__c</fullName>
        <description>Minimum loan amount approved by Mosaic for the loan term</description>
        <label>Min Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Display_Name__c</fullName>
        <description>Display name</description>
        <label>Product Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <description>Capture Mosaic Product Id</description>
        <label>Product Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>field to capture Mosaic Product Name</description>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Rate__c</fullName>
        <description>Standard rate from Mosaic for the loan decision</description>
        <label>Standard Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Credit Product</label>
    <nameField>
        <label>Credit Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>